Uploaded the word doc and PP

--- a/index.html
+++ b/index.html
@@ -21,20 +21,17 @@
 
 <body>
     <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
-        <a href="#" class="navbar-brand">Home</a>
+        <a href="index.html" class="navbar-brand">Home</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="" class="nav-link">Word Doc</a>
+                    <a href="word-doc.pdf" class="nav-link">Word Doc</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Power Point</a>
-                </li>
-                <li class="nav-item">
-                    <a href="Refrences.docx" class="nav-link">Refrences</a>
+                    <a href="the-border-wall-economy.pdf" class="nav-link">Power Point</a>
                 </li>
             </ul>
         </div>
@@ -63,13 +60,13 @@
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>Where will the money come from?</h2>
                         <p>
-                            <a href="https://www.cato.org/blog/cost-border-wall-keeps-climbing-its-becoming-less-wall">Check out the article</a>
                             <ul>
                                 <li>$1.375 billion from the Homeland Security appropriations bill</li>
                                 <li>$600 million from the Treasury Department’s drug forfeiture fund</li>
                                 <li>$2.5 billion from the Department of Defense’s drug interdiction program</li>
                                 <li>3.6 billion from the Department of Defense’s military construction account</li>
                             </ul>
+                            <a href="https://www.cato.org/blog/cost-border-wall-keeps-climbing-its-becoming-less-wall">According to Cato article</a>
                         </p>
                     </div>
                 </div>
@@ -84,7 +81,9 @@
                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/FKm9nfw_CRQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
                         </div>
                         <p class="lead">
-                            
+                            As a call to action, some patriots have set up crowd-funding on the popular site Go Fund Me to raise money towards creating the border wall. 
+                            According to a recent interview published by “CBS This Morning,” a group called We Build the Wall have fundraised over 23 million dollars. 
+                            This money has been donated by other Americans who support the creation of the Border Wall. It is noted that this wall is privately owned, and was created with permission by the private landowner. 
                         </p>
                     </div>
                 </div>
@@ -107,6 +106,7 @@
                             <li>Materials: Approximately $8.7 billion in concrete (97 percent of the materials); approximately $3.6 billion in steel (3 percent of the materials)</li>
                             <li>Labor: Approximately $12.3 billion (given the labor costs on the original 654 miles of barriers we can assume a conservative 1:1 ratio of materials to labor)”</li>
                         </ul>
+                        <a href="https://www.foxnews.com/opinion/trumps-border-wall-how-much-it-will-actually-cost-according-to-a-statistician">All according to Liberty Vittert</a>
                     </div>
                 </div>
             </div>
